# FlatHub

./: .gitignore  CMakeLists.txt  README.md  TESTING_GUIDE.md  docker-compose.yml
include/: CommandsCommand.hpp  DatabaseManager.hpp  FlatCommand.hpp  FlatRepository.hpp  GetFlatsCommand.hpp  HouseCommand.hpp  HouseRepository.hpp  LoginCommand.hpp  QuitCommand.hpp  RegisterCommand.hpp  TakeFlatCommand.hpp  UpdateFlatStatusCommand.hpp  UserRepository.hpp  client.hpp  command.hpp  factory.hpp  http_server.hpp  http_session.hpp  logger.hpp  server.hpp  session.hpp
include/auth/: jwt_utils.hpp
migrations/: 001_init.sql
src/auth/: jwt_utils.cpp
src/patterns/: CommandsCommand.cpp  FlatCommand.cpp  GetFlatsCommand.cpp  HouseCommand.cpp  LoginCommand.cpp  QuitCommand.cpp  RegisterCommand.cpp  TakeFlatCommand.cpp  UpdateFlatStatusCommand.cpp  factory.cpp  logger.cpp
src/repository/: FlatRepository.cpp  HouseRepository.cpp  UserRepository.cpp
src/service/: client.cpp  http_server.cpp  http_session.cpp  main_client.cpp  main_server.cpp  server.cpp  session.cpp
tests/: tests.cpp
